--- a/frontend/info.html
+++ b/frontend/info.html
@@ -43,7 +43,7 @@
         <form onsubmit="getTicket(event)">
             <div class="field label prefix border">
                 <i>key</i>
-                <input type="text" id="ticketId">
+                <input type="text" id="ticketId" name="ticketId">
                 <label>Ticket ID</label>
             </div>
             <button class="">
