--- a/frontend/storno.html
+++ b/frontend/storno.html
@@ -43,20 +43,10 @@
         <form onsubmit="stornoTicket(event)">
             <div class="field label prefix border">
                 <i>key</i>
-                <input type="text" id="ticketId">
+                <input type="text" id="ticketId" name="ticketId">
                 <label>Ticket ID</label>
             </div>
             <button class="red">
-                <i>warning</i>
-                Stornieren
-            </button>
-            <div class="field label prefix border">
-                <i>key</i>
-                <input type="text" id="ticketId">
-                <label>Ticket ID</label>
-            </div>
-
-            <button type="submit" id="submit" class="red">
                 <i>warning</i>
                 Stornieren
             </button>
