--- a/frontend/storno.html
+++ b/frontend/storno.html
@@ -1,74 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theater Tickets</title>
 
-
-    <link href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
+      rel="stylesheet"
+    />
 
     <style>
-        body {
-            --primary: #ffa726;
-            --on-primary: #000000;
-        }
+      body {
+        --primary: #ffa726;
+        --on-primary: #000000;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="primary">
-        <nav class="">
-            <button class="circle transparent" onclick="window.history.back()">
-                <i>arrow_back</i>
-                <span class="tooltip">
-                    zurück zur Hautpseite
-                </span>
-            </button>
-            <h5 class="max center-align">
-                <img class="" src="img/navLogo.png" style="height: 38px;">
-                Kolpingtheater Ramsen
-            </h5>
-            <button class="circle transparent">
-            </button>
-        </nav>
+      <nav class="">
+        <button class="circle transparent" onclick="window.history.back()">
+          <i>arrow_back</i>
+          <span class="tooltip"> zurück zur Hautpseite </span>
+        </button>
+        <h5 class="max center-align">
+          <img class="" src="img/navLogo.png" style="height: 38px" />
+          Kolpingtheater Ramsen
+        </h5>
+        <button class="circle transparent"></button>
+      </nav>
     </header>
 
     <main class="responsive">
-        <h1>Ticket Stornierung</h1>
-        <h5 class="small">
-            Hier können Sie Ihre Tickets stornieren.
-        </h5>
-        <form onsubmit="stornoTicket(event)">
-            <div class="field label prefix border">
-                <i>key</i>
-                <input type="text" id="ticketId" name="ticketId">
-                <label>Ticket ID</label>
-            </div>
-            <button class="red">
-                <i>warning</i>
-                Stornieren
-            </button>
-        </form>
-        <div class="snackbar error" id="snackbarError"></div>
-        <div class="snackbar primary" id="snackbarSuccess"></div>
+      <h1>Ticket Stornierung</h1>
+      <h5 class="small">Hier können Sie Ihre Tickets stornieren.</h5>
+      <form onsubmit="stornoTicket(event)">
+        <div class="field label prefix border">
+          <i>key</i>
+          <input type="text" id="ticketId" name="ticketId" />
+          <label>Ticket ID</label>
+        </div>
+        <button class="red">
+          <i>warning</i>
+          Stornieren
+        </button>
+      </form>
+      <div class="snackbar error" id="snackbarError"></div>
+      <div class="snackbar primary" id="snackbarSuccess"></div>
     </main>
 
-    <script type="module" src="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.js"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.js"
+    ></script>
     <script src="main.js"></script>
 
     <script>
-        // If hash
-        if (window.location.hash) {
-            // Get hash
-            const ticketId = window.location.hash.substring(1);
-            if (ticketId) {
-                // Set ticket id
-                document.getElementById("ticketId").value = ticketId;
-            }
+      // If hash
+      if (window.location.hash) {
+        // Get hash
+        const ticketId = window.location.hash.substring(1)
+        if (ticketId) {
+          // Set ticket id
+          document.getElementById('ticketId').value = ticketId
         }
+      }
     </script>
-</body>
-
+  </body>
 </html>
