--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theater Tickets</title>
+    <link rel="icon" href="img/logo.png" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
@@ -61,6 +62,13 @@
           <input type="number" min="1" max="5" name="numPeople" />
           <label>Anzahl an Personen</label>
         </div>
+        <div class="field label suffix border">
+          <select name="show" id="show">
+            <option selected disabled>Bitte auswählen</option>
+          </select>
+          <label>Aufführung</label>
+          <i>arrow_drop_down</i>
+        </div>
         <button class="btn primary" type="submit" id="submit" disabled>
           Reservieren
         </button>
@@ -86,5 +94,8 @@
       src="https://challenges.cloudflare.com/turnstile/v0/api.js"
       defer
     ></script>
+    <script>
+      fillShowSelect()
+    </script>
   </body>
 </html>
