--- a/frontend/storno.html
+++ b/frontend/storno.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theater Tickets</title>
+    <link rel="icon" href="img/logo.png" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
