Add nodemailer dependency and implement email notifications

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,21 +6,17 @@
     <title>Theater Tickets</title>
     <!-- Favicon img/logo.png -->
     <link rel="icon" href="img/logo.png" />
+    <link rel="stylesheet" href="main.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
       rel="stylesheet"
     />
-
-    <style>
-      body {
-        --primary: #ffa726;
-        --on-primary: #000000;
-      }
     </style>
   </head>
 
   <body>
+    <div class="triangle-container"></div>
     <header class="primary">
       <nav class="">
         <button class="circle transparent" onclick="window.history.back()">
