--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,16 +10,11 @@
       href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
       rel="stylesheet"
     />
-
-    <style>
-      body {
-        --primary: #ffa726;
-        --on-primary: #000000;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
+    <div class="triangle-container"></div>
     <header class="primary">
       <nav class="">
         <button class="circle transparent" onclick="window.history.back()">
@@ -35,54 +30,57 @@
     </header>
 
     <main class="responsive">
-      <h1>Ticket Reservierung für das Winterstück 2023</h1>
-      <h5 class="small">
-        Willkommen zur Ticketreservierung für unser Theater Winterstück 2023! Da
-        die Plätze begrenzt sind, bieten wir kostenlose Karten an, um
-        sicherzustellen, dass jeder die Chance hat, unsere Aufführung zu sehen.
-        Bitte reservieren Sie Ihre Karten unten und geben Sie uns Ihren Namen,
-        Ihre E-Mail-Adresse und die Anzahl der Personen (max 5.) in Ihrer Gruppe
-        an. Wir freuen uns darauf, Sie bei unserem Winterstück begrüßen zu
-        dürfen!
-      </h5>
-      <div class="space"></div>
-      <form onsubmit="bookTicket(event)">
-        <div class="field label prefix border">
-          <i>person</i>
-          <input type="text" name="name" />
-          <label>Name</label>
-        </div>
-        <div class="field label prefix border">
-          <i>email</i>
-          <input type="email" name="email" />
-          <label>E-Mail</label>
-        </div>
-        <div class="field label prefix border">
-          <i>tag</i>
-          <input type="number" min="1" max="5" name="numPeople" />
-          <label>Anzahl an Personen</label>
-        </div>
-        <div class="field label suffix border">
-          <select name="show" id="show">
-            <option selected disabled>Bitte auswählen</option>
-          </select>
-          <label>Aufführung</label>
-          <i>arrow_drop_down</i>
-        </div>
-        <button class="btn primary" type="submit" id="submit" disabled>
-          Reservieren
-        </button>
+      <article>
+        <h1>Ticket Reservierung für das Winterstück 2023</h1>
+        <p class="large">
+          Willkommen zur Ticketreservierung für unser Theater Winterstück 2023!
+          Da die Plätze begrenzt sind, bieten wir kostenlose Karten an, um
+          sicherzustellen, dass jeder die Chance hat, unsere Aufführung zu
+          sehen. Bitte reservieren Sie Ihre Karten unten und geben Sie uns Ihren
+          <b>Namen</b>, Ihre <b>E-Mail-Adresse</b> und die
+          <b>Anzahl der Personen</b> (max 5.) in Ihrer Gruppe an. Wir freuen uns
+          darauf, Sie bei unserem Winterstück begrüßen zu dürfen! Die
+          Aufführungen finden am <b>29. Dezember 2023</b> statt.
+        </p>
         <div class="space"></div>
-        <!-- 0x4AAAAAAAMmiOHBE5aRG9yx -->
-        <div
-          class="cf-turnstile"
-          data-sitekey="3x00000000000000000000FF"
-          data-callback="captchaCallback"
-          data-theme="light"
-        ></div>
-      </form>
-      <div class="snackbar error" id="snackbarError"></div>
-      <div class="snackbar primary" id="snackbarSuccess"></div>
+        <form onsubmit="bookTicket(event)">
+          <div class="field label prefix border">
+            <i>person</i>
+            <input type="text" name="name" />
+            <label>Vorname, Nachname</label>
+          </div>
+          <div class="field label prefix border">
+            <i>email</i>
+            <input type="email" name="email" />
+            <label>E-Mail</label>
+          </div>
+          <div class="field label prefix border">
+            <i>tag</i>
+            <input type="number" min="1" max="5" name="numPeople" />
+            <label>Anzahl an Personen</label>
+          </div>
+          <div class="field label suffix border">
+            <select name="show" id="show">
+              <option selected disabled>Bitte auswählen</option>
+            </select>
+            <label>Aufführung</label>
+            <i>arrow_drop_down</i>
+          </div>
+          <button class="btn primary" type="submit" id="submit" disabled>
+            Reservieren
+          </button>
+          <div class="space"></div>
+          <!-- 0x4AAAAAAAMmiOHBE5aRG9yx -->
+          <div
+            class="cf-turnstile"
+            data-sitekey="3x00000000000000000000FF"
+            data-callback="captchaCallback"
+            data-theme="light"
+          ></div>
+        </form>
+        <div class="snackbar error" id="snackbarError"></div>
+        <div class="snackbar primary" id="snackbarSuccess"></div>
+      </article>
     </main>
 
     <script
@@ -96,6 +94,8 @@
     ></script>
     <script>
       fillShowSelect()
+
+      //
     </script>
   </body>
 </html>
