--- a/frontend/storno.html
+++ b/frontend/storno.html
@@ -5,21 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Theater Tickets</title>
     <link rel="icon" href="img/logo.png" />
+    <link rel="stylesheet" href="main.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/beercss@3.4.2/dist/cdn/beer.min.css"
       rel="stylesheet"
     />
-
-    <style>
-      body {
-        --primary: #ffa726;
-        --on-primary: #000000;
-      }
-    </style>
   </head>
 
   <body>
+    <div class="triangle-container"></div>
     <header class="primary">
       <nav class="">
         <button class="circle transparent" onclick="window.history.back()">
