--- a/frontend/storno.html
+++ b/frontend/storno.html
@@ -44,7 +44,7 @@
         </button>
       </form>
       <div class="snackbar error" id="snackbarError"></div>
-      <div class="snackbar primary" id="snackbarSuccess"></div>
+      <div class="snackbar green" id="snackbarSuccess"></div>
     </main>
 
     <script
