--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,7 +80,7 @@
           ></div>
         </form>
         <div class="snackbar error" id="snackbarError"></div>
-        <div class="snackbar primary" id="snackbarSuccess"></div>
+        <div class="snackbar green" id="snackbarSuccess"></div>
       </article>
     </main>
 
