--- a/frontend/info.html
+++ b/frontend/info.html
@@ -61,7 +61,7 @@
       </article>
 
       <div class="snackbar error" id="snackbarError"></div>
-      <div class="snackbar primary" id="snackbarSuccess"></div>
+      <div class="snackbar green" id="snackbarSuccess"></div>
     </main>
 
     <script
