--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,11 @@
           <b>Anzahl der Personen</b> (max 5.) in Ihrer Gruppe an. Wir freuen uns
           darauf, Sie bei unserem Winterstück begrüßen zu dürfen! Die
           Aufführungen finden am <b>29. Dezember 2023</b> statt.
+          <br />
+          <br />
+          Bei technischen Problemen oder sonstigen Fragen erreichen Sie uns
+          unter
+          <b>kolpingjugendramsen@gmail.com</b>.
         </p>
         <div class="space"></div>
         <form onsubmit="bookTicket(event)">
@@ -73,8 +78,8 @@
           <div class="space"></div>
           <!-- data-sitekey="1x00000000000000000000AA" -->
           <div
-            class="cf-turnstile"
             data-sitekey="0x4AAAAAAAMmiOHBE5aRG9yx"
+            class="cf-turnstile"
             data-callback="captchaCallback"
             data-theme="light"
           ></div>
