Add message for all booked seats

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,10 @@
             <label>Aufführung</label>
             <i>arrow_drop_down</i>
           </div>
+          <h3 id="allBooked" class="red-text" style="display: none">
+            <i class="extra">info</i>
+            Aktuell sind alle Plätze bereits ausgebucht.
+          </h3>
           <h2><i class="extra">event_seat</i>Platzauswahl</h2>
           <h3 id="seatCounter">
             <span id="seatCounterNumber">0</span>/5 Plätze gewählt
