Update year for Winterstück event and related notifications to 2024 - remove sagenhaft image - refine countdown

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,21 +31,28 @@
 
     <main class="responsive">
       <article>
-        <h1>Ticket Reservierung für das Winterstück 2023</h1>
+        <h1>Ticket Reservierung für das Winterstück 2024</h1>
         <p class="large">
-          Willkommen zur Ticketreservierung für unser Theater Winterstück 2023!
+          Willkommen zur Ticketreservierung für unser Theater Winterstück 2024!
           Da die Plätze begrenzt sind, bieten wir kostenlose Karten an, um
           sicherzustellen, dass jeder die Chance hat, unsere Aufführung zu
           sehen. Bitte reservieren Sie Ihre Karten unten und geben Sie uns Ihren
           <b>Namen</b>, Ihre <b>E-Mail-Adresse</b> und die
           <b>Anzahl der Personen</b> (max 5.) in Ihrer Gruppe an. Wir freuen uns
           darauf, Sie bei unserem Winterstück begrüßen zu dürfen! Die
-          Aufführungen finden am <b>29. Dezember 2023</b> statt.
+          Aufführungen finden am <b>29. Dezember 2024</b> statt.
           <br />
           <br />
           Bei technischen Problemen oder sonstigen Fragen erreichen Sie uns
           unter
           <b>kolpingjugendramsen@gmail.com</b>.
+        </p>
+        <p
+          class="large error-container"
+          id="countdownNotice"
+          style="display: none"
+        >
+          Tickets erst ab [Datum] verfügbar.
         </p>
         <div class="space"></div>
         <form onsubmit="bookTicket(event)">
