--- a/frontend/info.html
+++ b/frontend/info.html
@@ -110,7 +110,7 @@
         row.appendChild(img)
 
         const h5 = document.createElement('h5')
-        h5.textContent = 'Sagenhaft Ticket'
+        h5.textContent = 'Winterstück Ticket'
         row.appendChild(h5)
 
         infoDiv.appendChild(row)
@@ -153,11 +153,6 @@
 
         imgDiv = document.createElement('div')
         imgDiv.classList.add('s12', 'm6')
-
-        const img2 = document.createElement('img')
-        img2.classList.add('responsive')
-        img2.src = 'img/sagenhaft.jpg'
-        imgDiv.appendChild(img2)
 
         mainRow.appendChild(infoDiv)
         mainRow.appendChild(imgDiv)
