--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
           <b>Namen</b>, Ihre <b>E-Mail-Adresse</b> und die
           <b>Anzahl der Personen</b> (max 5.) in Ihrer Gruppe an. Wir freuen uns
           darauf, Sie bei unserem Winterstück begrüßen zu dürfen! Die
-          Aufführungen finden am <b>29. Dezember 2024</b> statt.
+          Aufführungen finden am <b>27. & 28. Dezember 2024</b> statt.
           <br />
           <br />
           Bei technischen Problemen oder sonstigen Fragen erreichen Sie uns
