Enhance admin interface and seat selection functionality
- Updated admin.html to make ticket IDs clickable links directing to info.html.
- Added a progress bar in index.html to display available seats dynamically.
- Enhanced main.js to calculate total and booked seats, updating the progress bar accordingly.
- Introduced CSS styles for the progress bar and its container in main.css.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -94,7 +94,16 @@
           const tr = document.createElement('tr')
           for (const key in ticket) {
             const td = document.createElement('td')
-            td.textContent = ticket[key]
+            if (key === 'ticketId') {
+              const link = document.createElement('a')
+              link.href = `info.html#${ticket[key]}`
+              link.target = '_blank'
+              link.textContent = ticket[key]
+              link.classList.add('button', 'small')
+              td.appendChild(link)
+            } else {
+              td.textContent = ticket[key]
+            }
             tr.appendChild(td)
           }
           // Seats
