--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,12 @@
           unter
           <b>kolpingjugendramsen@gmail.com</b>.
         </p>
+        <div class="field border round">
+          <div class="progress">
+            <div id="totalSeatsProgress" class="indeterminate"></div>
+          </div>
+          <small id="totalSeatsText">Lade verfügbare Plätze...</small>
+        </div>
         <p
           class="large error-container"
           id="countdownNotice"
